<resources>
    <string name="app_name">Naukotheka</string>
    <string name="errors_timeout_error">Timeout</string>
    <string name="errors_network_error">Network is disabled</string>
    <string name="errors_email_is_busy">The specified mail is not available</string>
    <string name="errors_something_went_wrong">Something went wrong</string>
    <string name="error_passwords_not_equals">The specified password pair does not match. Check your entries and try again.</string>
    <string name="error_incorrect_credentials">Can\'t sign in, check the details</string>
    <string name="error_nickname_is_busy">The specified nickname is not available</string>
    <string name="error_password_policy">Password does not meet requirements</string>
    <string name="error_email_not_exist">The user with the specified email address has not previously been registered. Please check the correctness of the specified data.</string>
    <string name="error_email_format">Email input error</string>
    <string name="next">Next</string>
    <string name="ready">Done</string>
    <string name="the_best_scientific_works">The best scientific papers in one place</string>
    <string name="smart_community">Join Naukotheka community</string>
    <string name="new_ideas">Service of the newest ideas</string>
    <string name="skip">Skip</string>
    <string name="login_welcome">Wellcome to Naukotheka</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forget_password">Forgot your password</string>
    <string name="login_enter">Log in</string>
    <string name="login_registration">First time here? Sign up</string>
    <string name="registration_new_user">Create an account</string>
    <string name="registration_address_for_registration">Your email address will be used for registration</string>
    <string name="registration_agreement">By clicking on the "Next" button, you agree to the Terms of Service and confirm the Personal Data Processing Policy</string>
    <string name="registration_new_password">Create a strong password</string>
    <string name="registration_password_requirements">Now you need to come up with a strong password. It must meet a number of our requirements</string>
    <string name="registration_password_confirmation">Repeat password</string>
    <string name="registration_error">The specified password pair does not match. Check the entered data and try again</string>
    <string name="registration_confirmation">Confirmation of registration</string>
    <string name="registration_checking_mail">Check your email, we have sent you an email with a link</string>
    <string name="registration_send_letter">Didn\'t get the email? Check your spam folder or send the email again</string>
    <string name="enter_has_successfully_passed">Login successfully completed!</string>
    <string name="signed_up_registered_successfully">Complete registration</string>
    <string name="signed_up_fill_in_the_form">Upload your photo and fill out a short questionnaire about your education, career and interests</string>
    <string name="signed_up_fill_in_profile">Fill in the profile</string>
    <string name="short_info_profile_complete_registration">Complete registration</string>
    <string name="short_info_profile_minimum_information">We need minimal information about you</string>
    <string name="short_info_profile_name">What is your name</string>
    <string name="short_info_profile_surname">Last name</string>
    <string name="short_info_profile_field_name">First name</string>
    <string name="short_info_profile_patronymic">Middle name</string>
    <string name="short_info_profile_without_patronymic">No middle name</string>
    <string name="short_info_profile_link">Profile link</string>
    <string name="short_info_profile_personal_address">You can set a personal link for your profile</string>
    <string name="short_info_profile_field_link">Link</string>
    <string name="short_info_profile_button_complete_registration">Complete registration</string>
    <string name="password_recovery">Password recovery</string>
    <string name="password_recovery_send_link">We have sent a link to the email address you provided. Please check your mail and click on the link in the letter</string>
    <string name="password_recovery_send">Send</string>
    <string name="password_recovery_verification_send_link">We have sent a link to the email address you provided. Please check your mail and click on the link in the letter</string>
    <string name="password_recovery_verification_not_receive_letter">Did not get the email?</string>
    <string name="password_recovery_verification_send_again">Send again %s</string>
    <string name="password_recovery_support">Need help? Contact support</string>
    <string name="password_recovery_requirements">Now come up with a strong new password. It must meet a number of our requirements.</string>
    <string name="password_recovery_new_pass">New password</string>
    <string name="password_recovery_new_pass_confirmation">Repeat new password</string>
    <string name="password_recovery_save_password">Save password</string>
    <string name="password_recovery_by_phone_number">Password recovery by phone number</string>
    <string name="password_recovery_send_sms">We will send you an SMS with a code to confirm access to your account</string>
    <string name="password_recovery_phone_number">Phone number</string>
    <string name="password_recovery_send_code">Send code</string>
    <string name="password_recovery_help">Need help? Try to recover via email or contact support</string>
    <string name="password_recovery_sent_the_code_to_the_specified_number">An SMS with a code has been sent to the specified phone number</string>
    <string name="password_recovery_received_code">Received code</string>
    <string name="password_recovery_accept">Confirm</string>
    <string name="dialog_password_recovery_cancel_no">No</string>
    <string name="dialog_password_recovery_cancel_yes">Yes</string>
    <string name="are_you_sure_want_to_interrupt_the_password_recovery">Do you really want abort the process password recovery?</string>
    <string name="dialog_password_requirements_accessibly">Got it</string>
    <string name="dialog_password_requirements_count_of_symbols">Password must consist of 8 or more characters of the Latin alphabet;
 Digits;</string>
    <string name="dialog_password_requirements_capital_letters">Contain uppercase and lowercase letters;</string>
    <string name="dialog_password_requirements_digits">Digits;</string>
    <string name="dialog_password_requirements_symbols">Non-alphabetic characters "-", "_".</string>
    <string name="dialog_password_recovery_new_password_save">New password saved</string>
    <string name="dialog_password_recovery_successful">Recovery was successful</string>
    <string name="invalid_idp">Invalid identity provider selected</string>
    <string name="session_not_found">User session not found. Try logging in again</string>
    <string name="user_already_authenticated">User already authenticated</string>
    <string name="user_already_exists">User already exists</string>
    <string name="user_password_policy_not_met">User password policy not met</string>
    <string name="unsupported_action">Unsupported action</string>
    <string name="action_token_expired">Action token expired</string>
    <string name="authorization_request_not_found">Authorization request not found. Try logging in again</string>
    <string name="client_registration_not_found">This application is unauthorized</string>
    <string name="idp_exception">Error logging in with identity provider</string>
    <string name="chat_change">Изм.</string>
    <string name="chat_science_chat">НауЧат</string>
    <string name="chat_search_chat">Поиск по чатам и людям</string>
    <string name="chat_search_in_chat">Поиск в чате</string>
    <string name="chat_all">Все</string>
    <string name="chat_groups">Группы</string>
    <string name="chat_studies">Учеба</string>
    <string name="chat_work">Работа</string>
    <string name="chat_hidden">Скрытые</string>
    <string name="chat_count_people">18 участников</string>
    <string name="message">Сообщение</string>
    <string name="swipe_return">Вернуть</string>
    <string name="swipe_block">Заблокировать</string>
    <string name="swipe_clear">Очистить</string>
    <string name="swipe_anchor">Закрепить</string>
    <string name="swipe_read">Прочитано</string>
    <string name="file_attachment_dialog_cancel">Отменить</string>
    <string name="search_by_conversation">Поиск по беседе</string>
    <string name="interview_materials">Материалы беседы</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="disable_notifications">Отключить уведомления</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="add_participant">Добавить участника</string>
    <string name="photo_or_video">Фото или видео</string>
    <string name="file">Файл</string>
    <string name="contact">Контакт</string>
    <string name="interrogation">Опрос</string>
    <string name="send_photos">Отправить фото</string>
    <string name="pin_chat">Закрепить чат</string>
    <string name="unpin_chat">Открепить чат</string>
    <string name="hide_chat">Скрыть чат</string>
    <string name="back">Назад</string>
    <string name="write_message">Написать сообщение</string>
    <string name="search_contact">Поиск</string>
    <string name="nickname_contact">\@manalexxi</string>
    <string name="cancel">Отмена</string>
    <string name="add_members">Добавить %d участников</string>
    <string name="bottom_view_item_nau_sphere">НауСфера</string>
    <string name="bottom_view_item_nau_profile">НауПрофиль</string>
    <string name="bottom_view_item_nau_chat">НауЧат</string>
    <string name="bottom_view_item_my_territory">Моя территория</string>
    <string name="bottom_view_item_nau_search">НауПоиск</string>
    <string name="create_group">Создать группу</string>
    <string name="creating_of_group">Создание группы</string>
    <string name="group_name">Название группы</string>
    <string name="description_group">Описание группы</string>
    <string name="enter_description">Введите</string>
    <string name="count_symbols">Введите название группы не более 100 символов (%d/100)</string>
    <string name="participants">Участники</string>
    <string name="participants_count_format">Участников %s</string>
    <string name="count_participants">%d</string>
    <string name="admin">Админ</string>
    <string name="name_contact">Юлия Козлова</string>
    <string name="status">Был(а) недавно</string>
    <string name="go_to_profile">Перейти в профиль</string>
    <string name="search">Поиск</string>
    <string name="video">Видео</string>
    <string name="call">Позвонить</string>
    <string name="bell">Звук</string>
    <string name="yet">Еще</string>
    <string name="email">e-mail</string>
    <string name="email_value">ivan@smirnov.com</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_name_value">@smirnov</string>
    <string name="chats">Чаты</string>
    <string name="messages">Сообщения</string>
    <string name="media">Медиа</string>
    <string name="links">Ссылки</string>
    <string name="files">Файлы</string>
    <string name="audio">Аудио</string>
    <string name="file_name">Домашняя работа.xlsx</string>
    <string name="file_size">2.2 МБ</string>
    <string name="file_date">14 июля 2021 в 13:34</string>
    <string name="user">Домашняя работа</string>
    <string name="title_link">Наличие компьютера или ноутбука (телефон или планшет не подойдут), стабильного интернета, Веб-камеры;</string>
    <string name="link">https://forms.gle/FCj6YqGBbnn43ugBH forms.gle/FCj6YqGBbnnugBHz9z9</string>
</resources>