<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_darkgrey">

    <medved.studio.pharmix.ui.custom.HtmlTextView
        android:id="@+id/tv_requirements"
        style="@style/TextViewStyle.Usual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/golos_text_regular"
        android:text="@string/password_recovery_requirements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <medved.studio.pharmix.ui.widgets.CustomizedTextInput
        android:id="@+id/cti_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:hint="@string/password_recovery_new_pass"
        app:layout_constraintTop_toBottomOf="@id/tv_requirements"
        app:typeInput="type_input_password"/>

    <medved.studio.pharmix.ui.widgets.CustomizedTextInput
        android:id="@+id/cti_new_pass_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:hint="@string/password_recovery_new_pass_confirmation"
        app:layout_constraintTop_toBottomOf="@id/cti_new_pass"
        app:typeInput="type_input_password" />

    <Button
        android:id="@+id/btn_save_password"
        style="@style/Button.Registration"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/password_recovery_save_password"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>