<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_darkgrey">

    <TextView
        android:id="@+id/tv_send_link"
        style="@style/TextViewStyle.Usual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/golos_text_regular"
        android:gravity="start"
        android:text="@string/password_recovery_verification_send_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_not_receive_letter"
        style="@style/TextViewStyle.Usual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/golos_text_regular"
        android:text="@string/password_recovery_verification_not_receive_letter"
        app:layout_constraintTop_toBottomOf="@id/tv_send_link"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_send_again"
        style="@style/TextViewStyle"
        android:fontFamily="@font/golos_text_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/password_recovery_verification_send_again"
        app:layout_constraintTop_toBottomOf="@id/tv_not_receive_letter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <medved.studio.pharmix.ui.custom.HtmlTextView
        android:id="@+id/tv_support"
        style="@style/TextViewStyle"
        android:fontFamily="@font/golos_text_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_support"
        android:layout_marginBottom="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>