<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_darkgrey">

    <TextView
        android:id="@+id/tv_send_link"
        style="@style/TextViewStyle.Usual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/golos_text_regular"
        android:gravity="start"
        android:text="@string/password_recovery_send_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <medved.studio.pharmix.ui.widgets.CustomizedTextInput
        android:id="@+id/cti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:hint="@string/login_email"
        app:layout_constraintTop_toBottomOf="@id/tv_send_link"
        app:typeInput="type_input_email" />

    <Button
        android:id="@+id/btn_send"
        style="@style/Button.Registration"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/password_recovery_send"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>