<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/iv_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_files_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_file_name"
        style="@style/TextViewStyle.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/golos_text_regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_files"
        app:layout_constraintTop_toTopOf="@id/iv_files"
        tools:text="@string/file_name" />

    <TextView
        android:id="@+id/tv_file_size"
        style="@style/TextViewStyle.Usual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/golos_text_regular"
        android:textColor="@color/text_inactive"
        app:layout_constraintStart_toStartOf="@id/tv_file_name"
        app:layout_constraintTop_toBottomOf="@id/tv_file_name"
        tools:text="@string/file_size" />

    <TextView
        android:id="@+id/tv_file_date"
        style="@style/TextViewStyle.Usual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/golos_text_regular"
        android:textColor="@color/text_inactive"
        app:layout_constraintStart_toEndOf="@id/tv_file_size"
        app:layout_constraintTop_toBottomOf="@id/tv_file_name"
        tools:text="@string/file_date" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/pin_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_file_date" />

</androidx.constraintlayout.widget.ConstraintLayout>